# tracker_gp_lib

./: CMakeLists.txt  package.xml
include/ihgp/: InfiniteHorizonGP.hpp
include/tracker_gp_lib/: tracker.h
src/: InfiniteHorizonGP.cpp  Matern32model.cpp  tracker.cpp
