<?xml version="1.0"?>
<package format="2">
  <name>tracker_gp_lib</name>
  <version>0.0.0</version>
  <description>The tracker_gp_lib package</description>

  <maintainer email="sjnah@todo.todo">sjnah</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>libpcl-all-dev</depend>

  <export></export>
</package>
